// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block edit callback 1`] = `
<div>
  <form
    className="wp-blocks-tooths"
  >
    <div>
      <label
        htmlFor="something"
      >
        Form Field
      </label>
      <input
        className="isoblock-field"
        id="something"
        onChange={[Function]}
        value="Faces"
      />
    </div>
  </form>
</div>
`;

exports[`Block save callback 1`] = `
<form
  className="wp-blocks-tooths"
>
  <div>
    <label
      htmlFor=""
    >
      Form Field
    </label>
    <input
      className="isoblock-field"
      id=""
      value="Faces"
    />
  </div>
</form>
`;
